--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 	   <title>김현지의 블로그</title>
 	   <meta name="description" content="김현지의 블로그입니다.">
 	   <meta name="keywords" content="김현지, 블로그, 일상, 음식">
+	   <!-- Google / Search Engine Tags -->
+       <meta itemprop="name" content="김현지의 블로그입니다." />
+       <meta itemprop="description" content="김현지의 블로그입니다." />
+       <meta itemprop="image" content="thumbnail.jpg" />
+
+       <!-- Facebook Meta Tags -->
+       <meta property="og:url" content="https://hji150.github.io/blog/" />
+       <meta property="og:type" content="website" />
+       <meta property="og:title" content="김현지의 블로그입니다." />
+       <meta property="og:description" content="김현지의 블로그입니다." />
+       <meta property="og:image" content="thumbnail.jpg" />
+
+       <!-- Twitter Meta Tags -->
+       <meta name="twitter:card" content="summary_large_image" />
+       <meta name="twitter:title" content="김현지의 블로그입니다." />
+       <meta name="twitter:description" content="김현지의 블로그입니다." />
+       <meta name="twitter:image" content="thumbnail.jpg" />
 	   <link rel="stylesheet" href="style_0930.css">
    </head>
    <body>
@@ -86,4 +103,5 @@
       <p>copyright 2025. 김현지 모든 권리 보호.</p>
    </footer>
    </body>
+
 </html>
